<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material2"
    tools:context=".SubinterestActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:contentDescription="@string/todo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:text="@string/interest"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/lightgray"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:background="@color/lightgray"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/h_name"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/follow_me"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/linkTelp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/telp"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/linkFb"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/fb"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/linkIg"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ig"/>

                    </LinearLayout>




                    <View
                        android:layout_width="match_parent"
                        android:visibility="visible"
                        android:layout_marginTop="10dp"
                        android:layout_height="6dp"
                        android:background="@drawable/material2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/hobbyp"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/hobby"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:paddingBottom="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/makesp"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/makes"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:paddingBottom="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/mikesp"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/mikes"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:paddingBottom="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/interestp"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/interestpp"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:paddingBottom="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/cita_citap"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/cita"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"
                            android:paddingBottom="20dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>



            </android.support.v7.widget.CardView>


        </LinearLayout>


</RelativeLayout>